fixed feature image on Firefox

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -477,6 +477,11 @@ footer h4 {
    FEATURE
    =============================== */
 
+.widget.feature {
+  float: left;
+}
+
+
 .widget.feature .feature-bgimg {
   height: 650px; 
   background-position: center center;
